# vnhelper

./: .env.example  .gitignore  index.html  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml  test.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AutoUpdater.tsx
src/data/: kanban.ts
src/i18n/: index.ts
src/lib/: aiClient.ts  avatarUpload.ts  database.types.ts  photoThumbnail.ts  photosDb.ts  renpyTranslate.ts  roles.ts  scriptAi.ts  supabase.ts
src/state/: AuthProvider.tsx  calendar.ts  cardDetail.ts  entityEvents.ts  frozenEntities.ts  kanbanStore.tsx  notificationSettings.ts  notifications.ts  scripts.ts  storyGraph.ts  subscription.tsx  translations.ts  useTrayTasks.ts
src/styles/: auth.css  calendar.css  copy-button.css  graph.css  kanban.css  members.css  mmenu.css  photos.css  scripts.css  scrollbars.css  settings.css  skeleton.css  subscription.css  tailwind.css  tiptap.css  translations.css  widget.css  workspace.css
supabase/migrations/: 0001_scripts.sql  0002_project_cover_image_and_storage.sql  0003_workspace_avatar.sql  0004_script_translations.sql  0004_translations.sql  0005_translator_invitations.sql  0006_translations_folder_path.sql  0007_translation_strings_dialog_support.sql  0008_translation_file_stats_rpc.sql  0009_translation_strings_trailing.sql  0010_script_renpy_blocks.sql  0012_graph_layouts.sql  (+12 more)
(+120 files in other folders)
